adjust temple routes
