# routes/temple.js
@@ -1,7 +1,7 @@
 const routes = require('express').Router();
 const temples = require('../controllers/temple.js');
 
-routes.get('/', temples.findAll);
+//routes.get('/', temples.findAll);
 routes.get('/:temple_id', temples.findOne);
 
 routes.post('/', temples.create);
